force-app/main/default/objects/Date_Shift_Object__c/fields/Adjust_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Adjust_Minutes__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked to shift dates and times in the record by minutes, unchecked to adjust by whole days instead (e.g., tasks due and calendar events should shift by whole days).</description>
    <inlineHelpText>Checked to shift dates and times in the record by minutes, unchecked to adjust by whole days instead (e.g., tasks due and calendar events should shift by whole days).</inlineHelpText>
    <label>Adjust Minutes</label>
    <type>Checkbox</type>
</CustomField>