force-app/main/default/objects/Date_Shift_Object__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API Name of the object whose Date and DateTime fields are to be shifted.</description>
    <inlineHelpText>API Name of the object whose Date and DateTime fields are to be shifted.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>